--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -29,15 +29,12 @@
                 {% for item in bag_items %}
                     <div class="row">
                         <div class="col-2 my-2">
-                            <a aria-label="View product page" href="{% url 'product_detail' sku=item.product.sku %}">
+                            <a aria-label="View product page"
+                               href="{% url 'product_detail' sku=item.product.sku %}">
                                 <img class="border rounded mr-3 shop-img"
                                      width="200"
                                      height="200"
-                                     {% if "placeholder" in item.product.picture.url %}
-                                        src="{% static 'images/camellia-sinensis.jpg' %}"
-                                     {% else %}
-                                        src="{{ item.product.picture.url }}"
-                                     {% endif %}
+                                     {% if "placeholder" in item.product.picture.url %} src="{% static 'images/camellia-sinensis.jpg' %}" {% else %} src="{{ item.product.picture.url }}" {% endif %}
                                      alt="{{ item.product.name }}">
                             </a>
                         </div>
@@ -56,7 +53,9 @@
                 <hr class="my-0">
                 <div class="row text-black text-right">
                     <div class="col-10 offset-2">
-                        <p class="my-0">Total: £<span id="order-total">{{ total|floatformat:2 }}</span></p>
+                        <p class="my-0">
+                            Total: £<span id="order-total">{{ total|floatformat:2 }}</span>
+                        </p>
                         <p class="my-0" id="display-delivery"></p>
                         <p class="my-0" id="display-grand-total"></p>
                     </div>
@@ -64,13 +63,18 @@
             </div>
             <div class="col-12 col-lg-6">
                 <p class="text-muted">Please fill out the delivery form:</p>
-                <form action="{% url 'checkout' %}" method="post" id="payment-form" aria-label="Payment details form">
+                <form action="{% url 'checkout' %}"
+                      method="post"
+                      id="payment-form"
+                      aria-label="Payment details form">
                     {% csrf_token %}
+
                     <fieldset class="rounded px-3 mb-5">
                         <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
                         {{ order_form.full_name | as_crispy_field }}
                         {{ order_form.email | as_crispy_field }}
                     </fieldset>
+
                     <fieldset class="rounded px-3 mb-5">
                         <legend class="fieldset-label small text-black px-2 w-auto">Delivery</legend>
                         {{ order_form.phone_number | as_crispy_field }}
@@ -99,24 +103,41 @@
                             {% endif %}
                         </div>
                     </fieldset>
+
                     <fieldset>
                         <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
-                        <!-- A stripe card element will go here -->
+
                         <div class="mb-3" id="card-element"></div>
-                        <!-- Used to display form errors -->
                         <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
-                        <!-- Pass the client secret to the view so we can get the payment intent id -->
                         <input type="hidden" value="{{ client_secret }}" name="client_secret">
-                        <label for="id-email-subscription" class="form-check-label">
-                            Would you like to subscribe to our email in order to find out about our latest offers and other news?
-                        </label>
-                        <input type="checkbox"
-                               id="id-email-subscription"
-                               name="subscribe_to_email"
-                               class="form-check-input ml-2 mr-0">
+
+                        {% if user.is_authenticated %}
+                            {% if not subscribed_to_email %}
+                                <div class="form-check mt-3">
+                                    <input type="checkbox"
+                                           id="id-email-subscription"
+                                           name="subscribed_to_email"
+                                           class="form-check-input mr-1">
+                                    <label for="id-email-subscription" class="form-check-label ml-2">
+                                        Subscribe to our newsletter for offers and updates.
+                                    </label>
+                                </div>
+                            {% else %}
+                                <div class="alert alert-info mt-3">
+                                    You're already subscribed to our newsletter.
+                                    You can manage your preferences in your
+                                    <a href="{% url 'edit_profile' userkey=request.user.pk %}"
+                                       class="alert-link">profile settings</a>.
+                                </div>
+                            {% endif %}
+                        {% endif %}
+
                     </fieldset>
+
                     <div class="submit-button text-right mt-5 mb-2">
-                        <a aria-label="Back to bag" href="{% url 'view_bag' %}" class="btn btn-outline-black rounded-0">
+                        <a aria-label="Back to bag"
+                           href="{% url 'view_bag' %}"
+                           class="btn btn-outline-black rounded-0">
                             <span class="icon">
                                 <i class="fas fa-chevron-left"></i>
                             </span>
@@ -127,6 +148,7 @@
                         </button>
                     </div>
                 </form>
+
             </div>
         </div>
     </div>
