--- a/bag/templates/bag/bag_buttons.html
+++ b/bag/templates/bag/bag_buttons.html
@@ -2,13 +2,13 @@
 
 {% if sample_added == False %}
     {% if breakfast_blend_sample %}
-        <p>Get a free 20g sample of Breakfast Blend with your purchase!</p>
+        <h4 class="orange-text">As you have bought one of each of our teas you get a free 20g sample of Breakfast Blend with your purchase!</h4>
         <form action="{% url 'add_to_bag' product_id=breakfast_blend_sample %}"
               method="post">
             {% csrf_token %}
             <input type="hidden" name="weight" value="20">
             <input type="hidden" name="is_sample" value="true">
-            <input type="hidden" name="redirect_url" value="{% url 'add_to_bag' %}">
+            <input type="hidden" name="redirect_url" value="{% url 'view_bag' %}">
             <button type="submit"
                     class="btn btn-lg btn-success"
                     aria-label="Claim Free Sample of Breakfast Blend">
