--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -7,7 +7,7 @@
 {% block content %}
     <h1>{% trans "Email Addresses" %}</h1>
 {% if emailaddresses %}
-<p>{% trans 'The following email addresses are associated with your account:' %}</p>
+<p>{% trans "The following email addresses are associated with your account:" %}</p>
 
 <form action="{% url 'account_email' %}" class="email_list" method="post">
 {% csrf_token %}
@@ -15,9 +15,9 @@
 
   {% for emailaddress in emailaddresses %}
 <div class="ctrlHolder">
-      <label for="email_radio_{{forloop.counter}}" class="{% if emailaddress.primary %}primary_email{%endif%}">
+      <label for="email_radio_{{ forloop.counter }}" class="{% if emailaddress.primary %}primary_email{% endif %}">
 
-      <input id="email_radio_{{forloop.counter}}" type="radio" name="email" {% if emailaddress.primary or emailaddresses|length == 1 %}checked="checked"{%endif %} value="{{emailaddress.email}}"/>
+      <input id="email_radio_{{ forloop.counter }}" type="radio" name="email" {% if emailaddress.primary or emailaddresses|length == 1 %}checked="checked"{% endif %} value="{{ emailaddress.email }}"/>
 
 {{ emailaddress.email }}
     {% if emailaddress.verified %}
@@ -31,9 +31,9 @@
   {% endfor %}
 
 <div class="buttonHolder">
-      <button class="secondaryAction" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
-      <button class="secondaryAction" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
-      <button class="primaryAction" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
+      <button class="secondaryAction" type="submit" name="action_primary" >{% trans "Make Primary" %}</button>
+      <button class="secondaryAction" type="submit" name="action_send" >{% trans "Re-send Verification" %}</button>
+      <button class="primaryAction" type="submit" name="action_remove" >{% trans "Remove" %}</button>
 </div>
 
 </fieldset>
@@ -54,7 +54,6 @@
   {% endif %}
 
 {% endblock content %}
-
 
 {% block extra_body %}
 <script type="text/javascript">
