Fix: Templating bug in email confirm accounts template

--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -5,7 +5,7 @@
 
 {% block head_title %}{% trans "Confirm Email Address" %}{% endblock head_title %}
 
-{% block content %}
+{% block inner_content %}
 <h1>{% trans "Confirm Email Address" %}</h1>
 
 {% if confirmation %}
@@ -31,4 +31,4 @@
 
 {% endif %}
 
-{% endblock content %}
+{% endblock inner_content %}
